no overflow fix

--- a/webresume/static/css/styles.css
+++ b/webresume/static/css/styles.css
@@ -2,8 +2,6 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    overscroll-behavior: contain;
-    overflow: hidden;
 }
 #navbar{
     position: fixed;
